関数処理見直し。

--- a/give-potion-1.21.5.html
+++ b/give-potion-1.21.5.html
@@ -1,7 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
 <link rel="stylesheet" type="text/css" href="https://vivian24s.github.io/command-tool/common.css" />
 <script src="https://vivian24s.github.io/command-tool/common.js" ></script>
+<script src="formUtils.js"></script>
 
 <form name="form">
 	
@@ -1304,153 +1304,39 @@
 	
 //初期設定
 $(document).ready(function() {
-	
 	//プルダウン読み込み
 	setID();
 	makeCommand();
-
 });
 
-function set_custom_name(){
-	
-	//変数定義
-	custom_name = {};
-	
-	//コンポーネント組み込み
-	if(form.custom_name.value !== ""){
-		component_custom_name = "custom_name='" + form.custom_name.value + "'";
-	}else{
-		component_custom_name = "";
-	}
-}
-	
-function set_lore(){
-	
-	//変数定義
-	lore = [];
-	
-	//コンポーネント組み込み
-	if(form.lore[0].value !== ""){
-		lore.push('"' + form.lore[0].value + '"');
-	}
-	if(form.lore[1].value !== ""){
-		lore.push('"' + form.lore[1].value + '"');
-	}
-	if(form.lore[2].value !== ""){
-		lore.push('"' + form.lore[2].value + '"');
-	}
-	if(form.lore[3].value !== ""){
-		lore.push('"' + form.lore[3].value + '"');
-	}
-	
-	if(lore.length > 0){
-		component_lore = "lore=[" + lore + "]";
-	}else{
-		component_lore = "";
-	}
-	
-}
-
-function set_potion_contents(){
-	
-	//変数定義
-	var potion_contents = {};
-	var custom_effects = [];
-	
-	//コンポーネント組み込み
-	if(form.potion.value !== ""){
-		potion_contents.potion = form.potion.value;
-	}
-	if (form.custom_color_flag.value !== "") {
-		potion_contents.custom_color = parseInt(form.custom_color.value.substr(1, 6), 16);
-	}
-	for(var i = 0; i < form.amplifier.length; i++){
-		if(form.amplifier[i].value !== ""){
-			str = {};
-			str.id = form.amplifier[i].title;
-			str.amplifier = form.amplifier[i].value - 1;
-			str.duration = form.duration[i].value * 20;
-			if (form.show_particles_show_icon[i].value == "show_icon") {
-				str.show_icon = false;
-			} else if (form.show_particles_show_icon[i].value == "show_particles") {
-				str.show_particles = false;
-			}
-			custom_effects.push(str);
-		}
-	}
-	if(custom_effects.length > 0){
-		potion_contents.custom_effects = custom_effects;
-	}
-	if(Object.keys(potion_contents).length !== 0){
-		component_potion_contents = "potion_contents=" + JSON.stringify(potion_contents);
-	}else{
-		component_potion_contents = "";
-	}
-}
-
-
-function set_attribute_modifiers(){
-	
-	//変数定義
-	var attribute_modifiers = [];
-	
-	//コンポーネント組み込み
-	for(var i = 0; i < form.amount.length; i++){
-		if(form.amount[i].value !== ""){
-			str = {};
-			str.type = form.amount[i].title;
-			str.amount = parseFloat(form.amount[i].value);
-			str.operation = "add_value";
-			if(form.slot[i].value !== ""){
-				str.slot = form.slot[i].value;
-			}
-			if(form.id[i].value !== ""){
-				str.id = form.id[i].value;
-			}
-			attribute_modifiers.push(str);
-		}
-	}
-	if(Object.keys(attribute_modifiers).length > 0){
-		component_attribute_modifiers = "attribute_modifiers=" + JSON.stringify(attribute_modifiers);
-	}else{
-		component_attribute_modifiers = "";
-	}
-}
-	
 function makeCommand(){
-
-	set_custom_name();
-	set_lore();
-	set_potion_contents();
-	set_attribute_modifiers();
-	
-	var components = [];
-	
-	if(component_custom_name !== ''){
-		components.push(component_custom_name);
-	}
-	if(component_lore !== ''){
-		components.push(component_lore);
-	}
-	if(component_potion_contents !== ''){
-		components.push(component_potion_contents);
-	}
-	if(component_attribute_modifiers !== ''){
-		components.push(component_attribute_modifiers);
-	}	
-	
-	//====================
-	// 出力
-	//====================
-	if (form.count.value == "") {
-		form.cmdOutput.value = "/give " + form.targets.value + " " + form.item.value + "[" + components + "]";
-	}else{
-		form.cmdOutput.value = "/give " + form.targets.value + " " + form.item.value + "[" + components + "] " + form.count.value;
-	}
-	
-	//文字数出力
-	strLenPrint();
-	
+    var component_custom_name = set_custom_name(form);
+    var component_lore = set_lore(form);
+    var component_potion_contents = set_potion_contents(form);
+    var component_attribute_modifiers = set_attribute_modifiers(form);
+    var components = [];
+    if(component_custom_name !== ''){
+        components.push(component_custom_name);
+    }
+    if(component_lore !== ''){
+        components.push(component_lore);
+    }
+    if(component_potion_contents !== ''){
+        components.push(component_potion_contents);
+    }
+    if(component_attribute_modifiers !== ''){
+        components.push(component_attribute_modifiers);
+    }
+    //====================
+    // 出力
+    //====================
+    if (form.count.value == "") {
+        form.cmdOutput.value = "/give " + form.targets.value + " " + form.item.value + "[" + components + "]";
+    }else{
+        form.cmdOutput.value = "/give " + form.targets.value + " " + form.item.value + "[" + components + "] " + form.count.value;
+    }
+    //文字数出力
+    strLenPrint();
 }
 
 function setID(){
