--- a/give-enchant-1.21.5.html
+++ b/give-enchant-1.21.5.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://vivian24s.github.io/command-tool/common.css" />
 <script src="https://vivian24s.github.io/command-tool/common.js" ></script>
-<script src="formUtils.js"></script>
+<script src="https://vivian24s.github.io/command-tool/formUtils.js"></script>
 
 <form name="form">
 	
