--- a/give-enchant-1.21.5.html
+++ b/give-enchant-1.21.5.html
@@ -76,7 +76,7 @@
 		</tr>
 
 		<tr>
-			<td><input type="color" name="dyed_color" value="" onchange="makeCommand()"></td>
+			<td><input type="color" name="dyed_color" value="#ffffff" onchange="makeCommand()"></td>
 		</tr>
 		
 		<tr>
