tooltip_displayコンポーネントお試し実装。

--- a/give-potion-1.21.5.html
+++ b/give-potion-1.21.5.html
@@ -1288,7 +1288,7 @@
 	<b style="background-color:gainsboro">ツールチップ表示設定</b><br>
 	<table class="command-table-vertical">
 	  <tr>
-	    <th>ツールチップ表示</th>
+	    <th rowspan="3">ツールチップ表示</th>
 	    <td>
 	      <select class="command-input" name="hide_tooltip" onchange="makeCommand()">
 	        <option value="">未設定</option>
@@ -1298,8 +1298,7 @@
 	    </td>
 	  </tr>
 	  <tr>
-	    <th>隠すコンポーネント</th>
-	    <td>
+	    <td rowspan="2"></td>
 	      <select class="command-input" name="hidden_components" multiple size="4" onchange="makeCommand()">
 	        <option value="potion_contents">potion_contents</option>
 	        <option value="lore">lore</option>
