tooltip_displayコンポーネントお試し実装。

--- a/give-potion-1.21.5.html
+++ b/give-potion-1.21.5.html
@@ -1298,7 +1298,7 @@
 	    </td>
 	  </tr>
 	  <tr>
-	    <td rowspan="2"></td>
+	    <td rowspan="2">
 	      <select class="command-input" name="hidden_components" multiple size="4" onchange="makeCommand()">
 	        <option value="potion_contents">potion_contents</option>
 	        <option value="lore">lore</option>
