--- a/give-potion-1.21.5.html
+++ b/give-potion-1.21.5.html
@@ -1288,7 +1288,9 @@
 	<b style="background-color:gainsboro">ツールチップ表示設定</b><br>
 	<table class="command-table-vertical">
 	  <tr>
-	    <th rowspan="3">ツールチップ表示</th>
+	    <th rowspan="3">ツールチップ表示<br>
+			(Ctrl/Shiftで複数選択)
+		</th>
 	    <td>
 	      <select class="command-input" name="hide_tooltip" onchange="makeCommand()">
 	        <option value="">未設定</option>
@@ -1299,7 +1301,11 @@
 	  </tr>
 	  <tr>
 	    <td rowspan="2">
-	      <select class="command-input" name="hidden_components" multiple size="4" onchange="makeCommand()">
+	      <select class="command-input" name="hidden_components" multiple onchange="makeCommand()">
+	        <option value="potion_contents">potion_contents</option>
+	        <option value="lore">lore</option>
+	        <option value="custom_name">custom_name</option>
+	        <option value="attribute_modifiers">attribute_modifiers</option>
 	        <option value="potion_contents">potion_contents</option>
 	        <option value="lore">lore</option>
 	        <option value="custom_name">custom_name</option>
