--- a/give-enchant-1.21.5.html
+++ b/give-enchant-1.21.5.html
@@ -76,7 +76,7 @@
 		</tr>
 
 		<tr>
-			<td><input type="color" name="dyed_color" value="#ffffff" onchange="makeCommand()"></td>
+			<td><input type="color" name="dyed_color" value="#ffffff" onchange="makeCommand()" style="width:100%;height:100%;"></td>
 		</tr>
 		
 		<tr>
@@ -122,6 +122,35 @@
 				</select>
 			</td>
 		</tr>
+
+	  <tr>
+	    <th rowspan="3">ツールチップ表示<br>
+			(Ctrl/Shiftで複数選択)
+		</th>
+	    <td>
+	      <select class="command-input" name="hide_tooltip" onchange="makeCommand()">
+	        <option value="">未設定</option>
+	        <option value="false">表示</option>
+	        <option value="true">非表示</option>
+	      </select>
+	    </td>
+	  </tr>
+	  <tr>
+	    <td rowspan="2">
+	      <select class="command-input" name="hidden_components" multiple onchange="makeCommand()">
+	        <option value="attribute_modifiers">attribute_modifiers</option>
+			<option value="custom_name">custom_name</option>
+			<option value="damage">damage</option>
+			<option value="dyed_color">dyed_color</option>
+			<option value="enchantments">enchantments</option>
+			<option value="lore">lore</option>
+			<option value="trim">trim</option>
+			<option value="unbreakable">unbreakable</option>
+	        <!-- 必要に応じて他のコンポーネントも追加 -->
+	      </select>
+	    </td>
+	  </tr>
+
 	</table>
 	
 	<table class="command-table-vertical">
