--- a/give-potion-1.21.5.html
+++ b/give-potion-1.21.5.html
@@ -104,7 +104,7 @@
 		</tr>
 
 		<tr>
-			<td><input type="color" name="custom_color" value="" onchange="makeCommand()"></td>
+			<td><input class="command-input" type="color" name="custom_color" value="" onchange="makeCommand()" style="width:100%;height:100%;"></td>
 		</tr>
 	
 	</table>
