--- a/give-enchant-1.21.5.html
+++ b/give-enchant-1.21.5.html
@@ -76,7 +76,7 @@
 		</tr>
 
 		<tr>
-			<td><input type="color" name="dyed_color" value="#ffffff" onchange="makeCommand()" style="width:100%;height:100%;"></td>
+			<td><input type="color" name="dyed_color" value="#000000" onchange="makeCommand()" style="width:100%;height:100%;"></td>
 		</tr>
 		
 		<tr>
@@ -130,8 +130,8 @@
 	    <td>
 	      <select class="command-input" name="hide_tooltip" onchange="makeCommand()">
 	        <option value="">未設定</option>
-	        <option value="false">表示</option>
-	        <option value="true">非表示</option>
+	        <option value="false">選択したものを非表示</option>
+	        <option value="true">全て非表示</option>
 	      </select>
 	    </td>
 	  </tr>
@@ -1165,6 +1165,7 @@ function makeCommand(){
     var component_trim = set_trim(form);
     var component_enchantments = set_enchantments(form);
     var component_attribute_modifiers = set_attribute_modifiers(form);
+    var component_tooltip_display = set_tooltip_display(form);
     var components = [];
     if(component_custom_name !== ''){
         components.push(component_custom_name);
@@ -1189,6 +1190,9 @@ function makeCommand(){
     }
     if(component_attribute_modifiers !== ''){
         components.push(component_attribute_modifiers);
+    }
+    if(component_tooltip_display !== ''){
+        components.push(component_tooltip_display);
     }
     //giveコマンド生成ツール
     form.cmdOutput.value = buildGiveCommand(form, components);
