--- a/give-potion-1.21.5.html
+++ b/give-potion-1.21.5.html
@@ -108,7 +108,7 @@
 		</tr>
 
 		<tr>
-			<th>レアリティ</th>
+			<th>希少度</th>
 			<td>
 				<select class="command-input" name="rarity" onchange="makeCommand()">
 					<option value="">未設定</option>
