--- a/give-test-1.21.7.html
+++ b/give-test-1.21.7.html
@@ -8,7 +8,6 @@
 <script src="https://vivian24s.github.io/command-tool/common.js" ></script>
 <script src="https://vivian24s.github.io/command-tool/formUtils.js"></script>
 
-
 <form name="form">
 
     <b style="background-color:gainsboro">1.基本設定</b><br>
@@ -449,7 +448,24 @@
             </td>
         </tr>
 
+        <tr>
+            <th>ミツバチのデータ</th>
+            <td><input class="command-input" type="text" name="bees_entity_data" value="" placeholder="未設定「入力例：{id:&quot;bee&quot;,Anger:200}」" onchange="set_bees()"></td>
+        </tr>
+
+        <tr>
+            <th>巣の滞在時間(tick)</th>
+            <td><input class="command-input" type="number" min="0" name="bees_ticks_in_hive" value="" placeholder="未設定" onchange="set_bees()"></td>
+        </tr>
+
+        <tr>
+            <th>巣の最低滞在時間(tick)</th>
+            <td><input class="command-input" type="number" min="0" name="bees_min_ticks_in_hive" value="" placeholder="未設定" onchange="set_bees()"></td>
+        </tr>
+
 	</table>
+
+
 
 	<br clear="all">
 
@@ -485,6 +501,7 @@ function makeCommand(){
     var component_custom_data = set_custom_data(form);
     var component_base_color = set_base_color(form);
     var component_banner_patterns = set_banner_patterns(form);
+    var component_bees = set_bees(form);
 
     var components = [];
     if(component_custom_name !== ''){
@@ -498,6 +515,9 @@ function makeCommand(){
     }
     if(component_banner_patterns !== ''){
         components.push(component_banner_patterns);
+    }
+    if(component_bees !== ''){
+        components.push(component_bees);
     }
 
     //giveコマンド生成ツール
