ミツバチ情報を追加

--- a/give-test-1.21.7.html
+++ b/give-test-1.21.7.html
@@ -450,17 +450,17 @@
 
         <tr>
             <th>ミツバチのデータ</th>
-            <td><input class="command-input" type="text" name="bees_entity_data" value="" placeholder="未設定「入力例：{id:&quot;bee&quot;,Anger:200}」" onchange="set_bees()"></td>
+            <td><input class="command-input" type="text" name="bees_entity_data" value="" placeholder="未設定「入力例：{id:&quot;bee&quot;,Anger:200}」" onchange="makeCommand()"></td>
         </tr>
 
         <tr>
             <th>巣の滞在時間(tick)</th>
-            <td><input class="command-input" type="number" min="0" name="bees_ticks_in_hive" value="" placeholder="未設定" onchange="set_bees()"></td>
+            <td><input class="command-input" type="number" min="0" name="bees_ticks_in_hive" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
 
         <tr>
             <th>巣の最低滞在時間(tick)</th>
-            <td><input class="command-input" type="number" min="0" name="bees_min_ticks_in_hive" value="" placeholder="未設定" onchange="set_bees()"></td>
+            <td><input class="command-input" type="number" min="0" name="bees_min_ticks_in_hive" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
 
 	</table>
