ミツバチ情報を追加

--- a/give-test-1.21.7.html
+++ b/give-test-1.21.7.html
@@ -468,7 +468,7 @@
     <table class="command-table-vertical">
         <tr>
             <th>ブロックのデータ</th>
-            <td><input class="command-input" type="text" name="block_entity_data" value="" placeholder="未設定" onchange="set_block_entity_data()"></td>
+            <td><input class="command-input" type="text" name="block_entity_data" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
     </table>
 
