コンポーネント追加。

--- a/give-test-1.21.7.html
+++ b/give-test-1.21.7.html
@@ -481,47 +481,47 @@
 
     <table class="command-table-vertical">
         <tr>
-            <th>破壊音（break_sound）</th>
+            <th>破壊音</th>
             <td><input class="command-input" type="text" name="break_sound" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>Mob入りバケツのデータ（bucket_entity_data）</th>
+            <th>Mob入りバケツのデータ</th>
             <td><input class="command-input" type="text" name="bucket_entity_data" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>バンドルのデータ（bundle_contents）</th>
+            <th>バンドルのデータ</th>
             <td><input class="command-input" type="text" name="bundle_contents" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>破壊できるブロック（can_break）</th>
-            <td><input class="command-input" type="text" name="can_break" value="" placeholder="未設定（カンマ区切り可）" onchange="makeCommand()"></td>
+            <th>破壊できるブロック</th>
+            <td><input class="command-input" type="text" name="can_break" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>設置できるブロック（can_place_on）</th>
-            <td><input class="command-input" type="text" name="can_place_on" value="" placeholder="未設定（カンマ区切り可）" onchange="makeCommand()"></td>
+            <th>設置できるブロック</th>
+            <td><input class="command-input" type="text" name="can_place_on" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>クロスボウの装填アイテム（charged_projectiles）</th>
-            <td><input class="command-input" type="text" name="charged_projectiles" value="" placeholder="未設定（カンマ区切り可）" onchange="makeCommand()"></td>
+            <th>クロスボウの装填アイテム</th>
+            <td><input class="command-input" type="text" name="charged_projectiles" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>摂取時の振る舞い（consumable）</th>
+            <th>摂取時の振る舞い</th>
             <td><input class="command-input" type="text" name="consumable" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>収納ブロックのデータ（container）</th>
+            <th>収納ブロックのデータ</th>
             <td><input class="command-input" type="text" name="container" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>収納ブロックのルート（container_loot）</th>
+            <th>収納ブロックのルート</th>
             <td><input class="command-input" type="text" name="container_loot" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>カスタムモデルデータ（custom_model_data）</th>
+            <th>カスタムモデルデータ</th>
             <td><input class="command-input" type="number" name="custom_model_data" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
         <tr>
-            <th>デバッグ棒のデータ（debug_stick_state）</th>
+            <th>デバッグ棒のデータ</th>
             <td><input class="command-input" type="text" name="debug_stick_state" value="" placeholder="未設定" onchange="makeCommand()"></td>
         </tr>
     </table>
